更新接口规范
